--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,34 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --num-columns: 24;
+  --breakpoint-s: 640px;
+  --breakpoint-xl: 2560px;
+  --grid-column-width: calc(
+    min(100vw, var(--breakpoint-xl)) / var(--num-columns)
+  );
+  --purple: #7e2baf;
+  --text-color: #131212;
+  --text-grey: #6d6d6f;
+  --gap-color: #c9c9c9;
+  --background-color: #510fca;
+  --logo-text: #313030;
+  --highlight-purple: #b897d5;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  background-color: var(--gap-color);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  width: min(100vw, var(--breakpoint-xl));
+  margin: 0 auto;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
