extra styling to login form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
   --logo-text: #313030;
   --highlight-purple: #b897d5;
   --gap: 200px;
+  --font: "Segoe UI", tahoma, geneva, verdana, sans-serif;
 }
 
 html,
