--- a/src/components/phone/phone.module.scss
+++ b/src/components/phone/phone.module.scss
@@ -1,7 +1,16 @@
+.phoneSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  background-color: #e0e0e0;
+  width: 35dvw;
+}
+
 .phoneContainer {
-  width: 375px;
-  height: 667px;
-  border: 16px black solid;
+  width: 300px;
+  height: 550px;
+  border: 2px black solid;
   border-radius: 36px;
   padding: 20px;
   box-sizing: border-box;
