--- a/src/components/Customize/Customize.module.scss
+++ b/src/components/Customize/Customize.module.scss
@@ -14,7 +14,7 @@
   font-weight: bold;
   color: #333;
   text-align: center;
-  margin-bottom: 1rem;
+  margin: 30px;
 }
 
 .addButton {
@@ -30,3 +30,4 @@
   width: 100%;
   margin: 1rem 0;
 }
+
